--- a/Project/views/index.pug
+++ b/Project/views/index.pug
@@ -1,10 +1,4 @@
 html(lang="en")
-  
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title K8s Project
-  
+  include components/head.pug
   body 
-    h1 Hello world!
+    img(src='daily.jpg', alt="Random Daily Image")
