--- a/Project/views/index.pug
+++ b/Project/views/index.pug
@@ -1,4 +1,4 @@
 html(lang="en")
   include components/head.pug
   body 
-    img(src='daily.jpg', alt="Random Daily Image")
+    img(src='image.jpg', alt="Random Daily Image")
