--- a/Project/views/index.pug
+++ b/Project/views/index.pug
@@ -1,4 +1,12 @@
 html(lang="en")
   include components/head.pug
-  body 
+  
+  body
     img(src='image.jpg', alt="Random Daily Image")
+    
+    form
+      input(type="text", aria-label="TODO Text", maxlength="10")
+      input(type="submit")
+    
+    each i in [1,2,3,4,5]
+      div Test TODO Item #{i}
